--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     Hello
   </body>
   <script>
-console.log("hello");
+    'use strict';
+
+    const socket = new WebSocket('ws://192.168.1.101:4081');
   </script>
 </html>
